hphp/test/zend/good/ext/simplexml/tests/bug66084_0.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("simplexml")) print "skip simplexml not available";
}
