hphp/test/zend/bad/ext/simplexml/tests/bug66084_0.php.skipif
<?php if (!extension_loaded("simplexml")) print "skip simplexml not available"; ?>